add api comments

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -129,7 +129,6 @@ paths:
       tags:
         - Contributions
       requestBody:
-        description: Optional description in *Markdown*
         required: true
         content:
           application/json:
@@ -222,7 +221,7 @@ paths:
             type: integer
             format: int32
         - name: apiKey
-          in: path
+          in: header
           description: api de l'usuari
           required: true
           schema:
@@ -231,16 +230,19 @@ paths:
       responses:
         200:
           description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Contribution'
+
 
     post:
       summary: Create a new comment
       description: Create new comment
       tags:
         - Contributions
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CommentNew'
       parameters:
         - name: id
           in: path
@@ -249,15 +251,8 @@ paths:
           schema:
             type: integer
             format: int32
-        - name: content
-          in: path
-          description: content of comment
-          required: true
-          schema:
-            type: string
-            format: string
         - name: apiKey
-          in: path
+          in: header
           description: api de l'usuari
           required: true
           schema:
@@ -286,13 +281,6 @@ paths:
           schema:
             title: integer
             format: int32
-        - name: content
-          in: path
-          description: content of comment
-          required: true
-          schema:
-            type: string
-            format: string
       responses:
         200:
           description: successful operation
@@ -302,10 +290,16 @@ paths:
                 $ref: '#/components/schemas/Comment'
 
     post:
-      summary: Create a comment
+      summary: Create a reply comment
       description: Shows a comment
       tags:
         - Comments
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CommentNew'
       parameters:
         - name: id
           in: path
@@ -314,15 +308,8 @@ paths:
           schema:
             title: integer
             format: int32
-        - name: content
-          in: path
-          description: content of comment
-          required: true
-          schema:
-            type: string
-            format: string
         - name: apiKey
-          in: path
+          in: header
           description: api from user
           required: true
           schema:
@@ -484,6 +471,10 @@ components:
     Comment:
       type: object
       properties:
+        id:
+          type: number
+          format: int
+          description: id of the comment
         text:
           type: string
           format: string
@@ -500,7 +491,10 @@ components:
           type: number
           format: int32
           description: Identifier from contribution
-        timestamp:
+        created_at:
+          type: string
+          description: Datetime when the comment was created
+        updated_at:
           type: string
           description: Datetime when the comment was created
         points:
@@ -563,10 +557,18 @@ components:
       properties:
         title:
           type: string
-          description: Name of the submission
+          description: Title of the Contribution
         url:
           type: string
-          description: adress to the new
+          description: URL
         text:
           type: string
           description: Message
+
+    CommentNew:
+      type: object
+      properties:
+        text:
+          type: string
+          description: text comment
+
