--- a/api/api.yaml
+++ b/api/api.yaml
@@ -275,6 +275,30 @@ paths:
               schema:
                 $ref: '#/components/schemas/Comment'
 
+  /comentaris/{id}/replies:
+    get:
+      summary: All Comments from contribution
+      description: Returns all coments from contribution id
+      tags:
+        - Comments
+      parameters:
+        - name: id
+          in: path
+          description: id from user
+          required: true
+          schema:
+            type: integer
+            format: int32
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Comment'
+
   /contribucions/{id}/comentaris:
     get:
       summary: All Comments from contribution
